--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,17 +9,20 @@
     <Button
         android:id="@+id/button_toast"
         android:layout_width="0dp"
+        android:onClick="showToast"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/purple_200"
         android:text="@string/button_label_toast"
         android:textColor="@android:color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="OnClick" />
 
     <Button
         android:id="@+id/button_count"
         android:layout_width="0dp"
+        android:onClick="countUp"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/purple_200"
         android:text="@string/button_label_count"
